--- a/hands_on_machine_learning/refine_1/pandas_dataframe.ipynb
+++ b/hands_on_machine_learning/refine_1/pandas_dataframe.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas Dataframe"
+    "# Pandas Dataframe\n",
+    "\n",
+    "- 일단 아래에 있는 걸 읽어 본다\n",
+    "- 아래에 있는걸 읽었으면 chapter_2/p1_get_data_and_to_initial_examination.ipynb 를 읽어 본다\n",
+    "- 이 순서대로 읽으면 대략 감 잡힐듯"
    ]
   },
   {
