--- a/pytorch_ztm_2023/pytorch_fundamentals/01_tensor_basics.ipynb
+++ b/pytorch_ztm_2023/pytorch_fundamentals/01_tensor_basics.ipynb
@@ -5,6 +5,16 @@
    "metadata": {},
    "source": [
     "# PyTorch Tensor\n",
+    "1. Basics\n",
+    "2. Random tensor\n",
+    "3. Zero / One tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Basics\n",
     "- PyTorch의 가장 기본적인 building block인 Tensor에 대해 간략히 정리한다\n",
     "- Tensor에는 ndim과 shape가 있는데 차이는 이렇다\n",
     "    - ndim  = 말 그대로 dimension이 몇개인가. 따라서 ndim은 single scalar value이다\n",
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +130,73 @@
     "print(f'X2.ndim = {X2.ndim}    X2.shape = {X2.shape}')\n",
     "for i,d2 in enumerate(X2):\n",
     "    print(f'[{i}] : {d2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Random Tensor\n",
+    "- torch.rand\n",
+    "    - uniform distribution on the interval `[0,1)` 을 만든다\n",
+    "    - 기본적으로 shape을 지정해 주면 됨\n",
+    "    - 더 자세한 것은 다음을 참고 : https://pytorch.org/docs/stable/generated/torch.rand.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[0.6050, 0.2354, 0.7313],\n",
+      "          [0.9576, 0.6847, 0.6515],\n",
+      "          [0.5989, 0.6772, 0.2806]],\n",
+      "\n",
+      "         [[0.7233, 0.9037, 0.9344],\n",
+      "          [0.6656, 0.9564, 0.8322],\n",
+      "          [0.8974, 0.5757, 0.8264]],\n",
+      "\n",
+      "         [[0.8106, 0.6683, 0.3022],\n",
+      "          [0.8417, 0.0432, 0.6265],\n",
+      "          [0.8120, 0.5846, 0.2712]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.0847, 0.1186, 0.8437],\n",
+      "          [0.0058, 0.4386, 0.6462],\n",
+      "          [0.0171, 0.3045, 0.7409]],\n",
+      "\n",
+      "         [[0.4837, 0.0560, 0.3099],\n",
+      "          [0.1864, 0.9377, 0.1452],\n",
+      "          [0.2934, 0.0242, 0.1676]],\n",
+      "\n",
+      "         [[0.6206, 0.3123, 0.9585],\n",
+      "          [0.2679, 0.1243, 0.0431],\n",
+      "          [0.5561, 0.9411, 0.4161]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.2589, 0.5063, 0.0713],\n",
+      "          [0.9851, 0.7414, 0.9847],\n",
+      "          [0.9421, 0.5381, 0.8518]],\n",
+      "\n",
+      "         [[0.1171, 0.7842, 0.1319],\n",
+      "          [0.7122, 0.5211, 0.6649],\n",
+      "          [0.7393, 0.9506, 0.0321]],\n",
+      "\n",
+      "         [[0.6795, 0.0295, 0.9093],\n",
+      "          [0.5692, 0.3464, 0.5335],\n",
+      "          [0.1645, 0.6403, 0.3314]]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "Q = torch.rand(3,3,3,3)\n",
+    "print(Q)"
    ]
   },
   {
