--- a/pytorch_ztm_2023/pytorch_fundamentals/01_tensor_basics.ipynb
+++ b/pytorch_ztm_2023/pytorch_fundamentals/01_tensor_basics.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,54 +187,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[0.7307, 0.4293, 0.1546],\n",
-      "          [0.0594, 0.5691, 0.4507],\n",
-      "          [0.3859, 0.7255, 0.0970]],\n",
+      "tensor([[[[0.4317, 0.5073, 0.8773],\n",
+      "          [0.2286, 0.5672, 0.4344],\n",
+      "          [0.8892, 0.6132, 0.0783]],\n",
       "\n",
-      "         [[0.2026, 0.3824, 0.0188],\n",
-      "          [0.0123, 0.6303, 0.1415],\n",
-      "          [0.0778, 0.8893, 0.0672]],\n",
+      "         [[0.3691, 0.3377, 0.8720],\n",
+      "          [0.8989, 0.8509, 0.1463],\n",
+      "          [0.5764, 0.1102, 0.3394]],\n",
       "\n",
-      "         [[0.8131, 0.2966, 0.9802],\n",
-      "          [0.1207, 0.1153, 0.4635],\n",
-      "          [0.3427, 0.2692, 0.9562]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.0842, 0.8079, 0.6057],\n",
-      "          [0.8725, 0.1093, 0.2645],\n",
-      "          [0.5275, 0.1450, 0.4379]],\n",
-      "\n",
-      "         [[0.1625, 0.0748, 0.4836],\n",
-      "          [0.3930, 0.5092, 0.0191],\n",
-      "          [0.3907, 0.0197, 0.7863]],\n",
-      "\n",
-      "         [[0.6305, 0.5263, 0.3548],\n",
-      "          [0.4003, 0.8355, 0.1982],\n",
-      "          [0.5727, 0.2624, 0.3441]]],\n",
+      "         [[0.1773, 0.3162, 0.6467],\n",
+      "          [0.1458, 0.8761, 0.9501],\n",
+      "          [0.9868, 0.3272, 0.4622]]],\n",
       "\n",
       "\n",
-      "        [[[0.0928, 0.5163, 0.5379],\n",
-      "          [0.5936, 0.8886, 0.9892],\n",
-      "          [0.5191, 0.5042, 0.6203]],\n",
+      "        [[[0.8220, 0.3400, 0.4744],\n",
+      "          [0.9419, 0.1344, 0.9929],\n",
+      "          [0.7756, 0.6308, 0.2709]],\n",
       "\n",
-      "         [[0.2820, 0.6489, 0.6790],\n",
-      "          [0.7387, 0.9260, 0.1924],\n",
-      "          [0.9359, 0.9771, 0.8868]],\n",
+      "         [[0.5790, 0.0791, 0.7402],\n",
+      "          [0.5914, 0.3827, 0.2002],\n",
+      "          [0.8753, 0.8205, 0.6569]],\n",
       "\n",
-      "         [[0.6472, 0.7613, 0.0555],\n",
-      "          [0.0541, 0.9731, 0.8207],\n",
-      "          [0.6058, 0.1365, 0.6433]]]])\n",
-      "tensor([[0.2960, 0.9685, 0.0664, 0.8166],\n",
-      "        [0.8890, 0.7822, 0.9149, 0.7012],\n",
-      "        [0.2082, 0.6614, 0.3685, 0.6900],\n",
-      "        [0.5730, 0.0210, 0.3633, 0.1368]])\n"
+      "         [[0.4495, 0.5649, 0.1459],\n",
+      "          [0.6533, 0.9138, 0.1146],\n",
+      "          [0.5521, 0.9185, 0.4815]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.0204, 0.1684, 0.5822],\n",
+      "          [0.0188, 0.1112, 0.1175],\n",
+      "          [0.7254, 0.0729, 0.7871]],\n",
+      "\n",
+      "         [[0.2939, 0.1804, 0.6919],\n",
+      "          [0.5434, 0.5970, 0.6286],\n",
+      "          [0.3583, 0.6227, 0.8340]],\n",
+      "\n",
+      "         [[0.2224, 0.1572, 0.4092],\n",
+      "          [0.2197, 0.6753, 0.2181],\n",
+      "          [0.3632, 0.3572, 0.9878]]]])\n",
+      "tensor([[0.7488, 0.4095, 0.9593, 0.7246],\n",
+      "        [0.6659, 0.9044, 0.8931, 0.8122],\n",
+      "        [0.5713, 0.1131, 0.9844, 0.2817],\n",
+      "        [0.9068, 0.7497, 0.6024, 0.1124]])\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,20 +355,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.8417, 0.4414, 0.6084],\n",
-      "        [0.4815, 0.1128, 0.5580],\n",
-      "        [0.9749, 0.7092, 0.4462]])\n",
+      "tensor([[0.9424, 0.6636, 0.1563],\n",
+      "        [0.5673, 0.7983, 0.2082],\n",
+      "        [0.7639, 0.8822, 0.8058]])\n",
       "2 torch.Size([3, 3]) torch.float32\n",
-      "tensor([[0.5684, 0.2741, 0.2067],\n",
-      "        [0.8094, 0.2238, 0.7968],\n",
-      "        [0.9620, 0.1008, 0.3497]])\n",
+      "tensor([[0.2325, 0.6448, 0.9592],\n",
+      "        [0.7342, 0.0809, 0.0845],\n",
+      "        [0.4493, 0.0617, 0.2776]])\n",
       "2 torch.Size([3, 3]) torch.float32\n",
       "tensor([[0., 0., 0.],\n",
       "        [0., 0., 0.],\n",
@@ -401,20 +401,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3271, 0.2192, 0.6294],\n",
-      "        [0.6172, 0.2363, 0.8735],\n",
-      "        [0.3789, 0.4126, 0.4844]], dtype=torch.float16)\n",
+      "tensor([[0.4258, 0.7847, 0.7065],\n",
+      "        [0.6743, 0.9429, 0.6064],\n",
+      "        [0.9893, 0.6870, 0.0215]], dtype=torch.float16)\n",
       "2 torch.Size([3, 3]) torch.float16\n",
-      "tensor([[0.6650, 0.0210, 0.5049],\n",
-      "        [0.8042, 0.8096, 0.7529],\n",
-      "        [0.3872, 0.2222, 0.7188]], dtype=torch.float16)\n",
+      "tensor([[0.8262, 0.9092, 0.6108],\n",
+      "        [0.1416, 0.9092, 0.1992],\n",
+      "        [0.2549, 0.0757, 0.0962]], dtype=torch.float16)\n",
       "2 torch.Size([3, 3]) torch.float16\n",
       "tensor([[0., 0., 0.],\n",
       "        [0., 0., 0.],\n",
@@ -452,12 +452,11 @@
     "## device, dtype, shape, requires_grad\n",
     "- Tensor에서 가장 많이 겪는 문제 3가지는 이렇다\n",
     "    - Tensor shape가 서로 안맞아서 연산이 안됨\n",
-    "    - dtype을 잘못 지정해서 서로 안맞아 연산이 안됨 / 너무 느림 / 너무 정확도가 낮음\n",
+    "    - dtype을 잘못 지정해서 너무 느림 / 너무 정확도가 낮음\n",
+    "        - 서로 다른 type을 가지고 operation을 할 때 형변환은 자동으로 해 주는 듯? C와 비슷하게 더 큰 타입 우선, float 우선으로 해 주는 듯\n",
     "    - device를 잘못 지정해서 같이 연산이 안됨 / 너무 느림\n",
-    "\n",
     "- device는 기본 cpu다\n",
     "    - `torch.set_default_device`를 사용하면 CUDA로 지정할 수 있다\n",
-    "\n",
     "- requires_grad\n",
     "    - 이 Tensor에 대해 gradient를 track할 것인지 여부를 정하는 부분이다\n",
     "    - keras에서는 gradient tape이나 trainable같은 bool을 조작했는데 여기서는 Tensor단위로 조작하는 구나"
@@ -465,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -494,22 +493,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.8936, 0.6880, 0.4453],\n",
-      "        [0.0473, 0.2778, 0.5786],\n",
-      "        [0.0462, 0.9028, 0.7998]], device='cuda:0', dtype=torch.float16)\n",
-      "tensor([[0.7575, 0.6125, 0.1070],\n",
-      "        [0.4004, 0.2287, 0.3689],\n",
-      "        [0.3049, 0.7245, 0.3035]], device='cuda:0')\n",
-      "tensor([[0.6769, 0.4214, 0.0477],\n",
-      "        [0.0190, 0.0636, 0.2135],\n",
-      "        [0.0141, 0.6541, 0.2427]], device='cuda:0')\n",
+      "tensor([[0.5229, 0.6592, 0.0643],\n",
+      "        [0.2134, 0.1534, 0.5308],\n",
+      "        [0.7588, 0.9341, 0.5630]], device='cuda:0', dtype=torch.float16)\n",
+      "tensor([[0.9879, 0.9446, 0.2228],\n",
+      "        [0.5277, 0.0601, 0.7846],\n",
+      "        [0.8423, 0.2141, 0.8168]], device='cuda:0')\n",
+      "tensor([[0.5166, 0.6227, 0.0143],\n",
+      "        [0.1126, 0.0092, 0.4164],\n",
+      "        [0.6391, 0.2000, 0.4599]], device='cuda:0')\n",
       "torch.float32\n"
      ]
     }
