--- a/pytorch_ztm_2023/pytorch_fundamentals/02_tensor_basic_operations.ipynb
+++ b/pytorch_ztm_2023/pytorch_fundamentals/02_tensor_basic_operations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PyTorch Tensor Operations\n",
+    "## Tensor basic operations\n",
     "- Addition (+)\n",
     "- Subtraction (-)\n",
     "- Division (/,//)\n",
@@ -16,7 +16,7 @@
     "    - 두 vector (1-dim)에 대해 하면 dot product를 해준다\n",
     "    - 그외의 경우엔 서로 shape이 맞아야 (NxM,MxN) 해준다\n",
     "    - matmul, mm 으로도 같은걸 할 수 있음\n",
-    "    - `.T`로 transpose도 할 수 있다"
+    "    - `.transpose`,`.t`,`.T`로 transpose도 할 수 있다"
    ]
   },
   {
@@ -388,6 +388,39 @@
     "X1_t = X1.T\n",
     "print('X1.T')\n",
     "print(X1_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1\n",
+      "tensor([[0.7290, 0.7775],\n",
+      "        [0.9486, 0.7516],\n",
+      "        [0.1811, 0.5962]])\n",
+      "X1.mean()\n",
+      "tensor(0.6640)\n",
+      "X1.sum()\n",
+      "tensor(3.9840)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean, sum\n",
+    "X1 = torch.rand(3,2)\n",
+    "print('X1')\n",
+    "print(X1)\n",
+    "\n",
+    "print('X1.mean()')\n",
+    "print(X1.mean())\n",
+    "\n",
+    "print('X1.sum()')\n",
+    "print(X1.sum())"
    ]
   },
   {
