--- a/pytorch_ztm_2023/03_basic_classification/03_multiclass_classification.ipynb
+++ b/pytorch_ztm_2023/03_basic_classification/03_multiclass_classification.ipynb
@@ -138,7 +138,7 @@
     "            optimizer.step() \n",
     "\n",
     "        if e % 10 == 0:\n",
-    "            model.eval() # model을 evaluation mode로 설정한다\n",
+    "            # model.eval() # model을 evaluation mode로 설정한다\n",
     "            with torch.inference_mode():\n",
     "                y_pred_test_logit = model(X_test)\n",
     "                test_loss = loss_func(y_pred_test_logit, y_test)\n",
@@ -148,7 +148,7 @@
     "\n",
     "                print(f'Epoch {e}: test_loss: {test_loss:.2f}    test_acc: {test_acc:.2f}')\n",
     "\n",
-    "            model.train() # model을 training mode로 원상 복구\n",
+    "            # model.train() # model을 training mode로 원상 복구\n",
     "    \n",
     "    X_train = X_train.to(X_train_prev_device)\n",
     "    y_train = y_train.to(y_train_prev_device)\n",
