--- a/pytorch_ztm_2023/06_going_modular/00_follow_book.ipynb
+++ b/pytorch_ztm_2023/06_going_modular/00_follow_book.ipynb
@@ -289,9 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting going_modular/engine.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile going_modular/engine.py\n",
     "\"\"\"\n",
@@ -487,6 +495,144 @@
     "  # Return the filled results at the end of the epochs\n",
     "  return results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting going_modular/utils.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile going_modular/utils.py\n",
+    "\"\"\"\n",
+    "Contains various utility functions for PyTorch model training and saving.\n",
+    "\"\"\"\n",
+    "import torch\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def save_model(model: torch.nn.Module,\n",
+    "               target_dir: str,\n",
+    "               model_name: str):\n",
+    "  \"\"\"Saves a PyTorch model to a target directory.\n",
+    "\n",
+    "  Args:\n",
+    "    model: A target PyTorch model to save.\n",
+    "    target_dir: A directory for saving the model to.\n",
+    "    model_name: A filename for the saved model. Should include\n",
+    "      either \".pth\" or \".pt\" as the file extension.\n",
+    "\n",
+    "  Example usage:\n",
+    "    save_model(model=model_0,\n",
+    "               target_dir=\"models\",\n",
+    "               model_name=\"05_going_modular_tingvgg_model.pth\")\n",
+    "  \"\"\"\n",
+    "  # Create target directory\n",
+    "  target_dir_path = Path(target_dir)\n",
+    "  target_dir_path.mkdir(parents=True,\n",
+    "                        exist_ok=True)\n",
+    "\n",
+    "  # Create model save path\n",
+    "  assert model_name.endswith(\".pth\") or model_name.endswith(\".pt\"), \"model_name should end with '.pt' or '.pth'\"\n",
+    "  model_save_path = target_dir_path / model_name\n",
+    "\n",
+    "  # Save the model state_dict()\n",
+    "  print(f\"[INFO] Saving model to: {model_save_path}\")\n",
+    "  torch.save(obj=model.state_dict(),\n",
+    "             f=model_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting going_modular/train.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile going_modular/train.py\n",
+    "\"\"\"\n",
+    "Trains a PyTorch image classification model using device-agnostic code.\n",
+    "\"\"\"\n",
+    "\n",
+    "import os\n",
+    "import torch\n",
+    "import data_setup, engine, model_builder, utils\n",
+    "\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "# Setup hyperparameters\n",
+    "NUM_EPOCHS = 5\n",
+    "BATCH_SIZE = 32\n",
+    "HIDDEN_UNITS = 10\n",
+    "LEARNING_RATE = 0.001\n",
+    "\n",
+    "# Setup directories\n",
+    "train_dir = \"data/pizza_steak_sushi/train\"\n",
+    "test_dir = \"data/pizza_steak_sushi/test\"\n",
+    "\n",
+    "# Setup target device\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "# Create transforms\n",
+    "data_transform = transforms.Compose([\n",
+    "  transforms.Resize((64, 64)),\n",
+    "  transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "# Create DataLoaders with help from data_setup.py\n",
+    "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(\n",
+    "    train_dir=train_dir,\n",
+    "    test_dir=test_dir,\n",
+    "    transform=data_transform,\n",
+    "    batch_size=BATCH_SIZE\n",
+    ")\n",
+    "\n",
+    "# Create model with help from model_builder.py\n",
+    "model = model_builder.TinyVGG(\n",
+    "    input_shape=3,\n",
+    "    hidden_units=HIDDEN_UNITS,\n",
+    "    output_shape=len(class_names)\n",
+    ").to(device)\n",
+    "\n",
+    "# Set loss and optimizer\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(),\n",
+    "                             lr=LEARNING_RATE)\n",
+    "\n",
+    "# Start training with help from engine.py\n",
+    "engine.train(model=model,\n",
+    "             train_dataloader=train_dataloader,\n",
+    "             test_dataloader=test_dataloader,\n",
+    "             loss_fn=loss_fn,\n",
+    "             optimizer=optimizer,\n",
+    "             epochs=NUM_EPOCHS,\n",
+    "             device=device)\n",
+    "\n",
+    "# Save the model with help from utils.py\n",
+    "utils.save_model(model=model,\n",
+    "                 target_dir=\"models\",\n",
+    "                 model_name=\"05_going_modular_script_mode_tinyvgg_model.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
